# splatsnap

./: .gitignore  LICENSE  README.md
backend/: app.py  cuda_test.py  environment.yml
backend/splatsnap/: pyproject.toml
backend/splatsnap/pipeline/: video_processor.py
frontend/SplatSnap/: SplatSnap.sln
frontend/SplatSnap/SplatSnapConsole/: Program.cs  SplatSnapConsole.csproj
