[tool.poetry]
name = "splatsnap"
version = "0.1.0"
description = "Processing pipeline for gaussian splatting"
authors = ["André Gröschel <andre@vondertech.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
